--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>music search</title>
+  <title>Stream Sweep</title>
   <script src="//use.typekit.net/zjo0yct.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <meta name="viewport" content="width=device-width">
@@ -13,10 +13,32 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="http://fb.me/react-0.11.1.js"></script>
   <script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.1.2/packery.pkgd.min.js"></script>
   <script src="/javascripts/vendor.js"></script>
   <script src="/javascripts/app.js"></script>
 </head>
 <body>
 <div id="main"></div>
+
+<footer>
+  <div class="footer-wrap">
+    <p>
+      A thing by <a href="http://twitter.com/adrianleb">@adrianleb</a>
+    </p>
+  </div>
+</footer>
+
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55650465-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
