--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,7 +23,7 @@
 <footer>
   <div class="footer-wrap">
     <p>
-      A thing by <a href="http://twitter.com/adrianleb">@adrianleb</a>
+      A thing by <a href="http://twitter.com/adrianleb" target="_blank">@adrianleb</a>
     </p>
   </div>
 </footer>
