--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -7,8 +7,9 @@
   <title>Stream Sweep</title>
   <script src="//use.typekit.net/zjo0yct.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <meta name="viewport" content="width=device-width">
+  <!-- <meta name="viewport" content="width=device-width"> -->
   <link rel="stylesheet" href="/stylesheets/app.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="http://fb.me/react-0.11.1.js"></script>
